--- a/SwebTest/pom.xml
+++ b/SwebTest/pom.xml
@@ -24,6 +24,29 @@
             <build>
                 <plugins>
                     <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>1.8</version>
+
+                        <executions>
+                            <execution>
+                                <phase>compile</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <tasks>
+                                        <echo>TEST_PBX_IP ${env.Test_PBX_IP}</echo>
+                                        <echo>Using ${test-user-prperties}</echo>
+                                        <echo>directory ${env.WORKSPACE}</echo>
+                                        <copy file="${env.WORKSPACE}/SwebTest/src/test/resources/testUserProperties/${test-user-prperties}" tofile="${env.WORKSPACE}/SwebTest/src/test/resources/data.properties" overwrite="true"/>
+                                    </tasks>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>exec-maven-plugin</artifactId>
                         <version>1.1.1</version>
