--- a/SwebTest/src/main/resources/data.properties
+++ b/SwebTest/src/main/resources/data.properties
@@ -1,65 +1,60 @@
-# ÓÃÀýÊ§°ÜµÄÖØÅÜ´ÎÊý
-maxRunCount=2
-#====================================ÒÔÏÂÐÅÏ¢Çë¸ù¾ÝÊµ¼Ê±»²â»·¾³ÉèÖÃÏà¹ØÐÅÏ¢===============================
-#=================================================ÒÔÏÂÐÅÏ¢Çë²»ÒªÐÞ¸Ä===========================================================================================
-#¹È¸èä¯ÀÀÆ÷Çý¶¯³ÌÐòÂ·¾¶--Çë²»ÒªÐÞ¸Ä
+#====================================ä»¥ä¸‹ä¿¡æ¯è¯·æ ¹æ®å®žé™…è¢«æµ‹çŽ¯å¢ƒè®¾ç½®ç›¸å…³ä¿¡æ¯===============================
+#=================================================ä»¥ä¸‹ä¿¡æ¯è¯·ä¸è¦ä¿®æ”¹===========================================================================================
+#è°·æ­Œæµè§ˆå™¨é©±åŠ¨ç¨‹åºè·¯å¾„--è¯·ä¸è¦ä¿®æ”¹
 CHROME_PATH = src\\main\\resources\\driver\\chrome\\chromedriver.exe
-#´íÎó½ØÍ¼±£´æÂ·¾¶--Çë²»ÒªÐÞ¸Ä
+#é”™è¯¯æˆªå›¾ä¿å­˜è·¯å¾„--è¯·ä¸è¦ä¿®æ”¹
 SCREENSHOT_PATH = pic\\
-#µ¼Èëµ¼³öÎÄ¼þ±£´æÂ·¾¶--Çë²»ÒªÐÞ¸Ä
+#å¯¼å…¥å¯¼å‡ºæ–‡ä»¶ä¿å­˜è·¯å¾„--è¯·ä¸è¦ä¿®æ”¹
 EXPORT_PATH = exportFile\\
 EXPORT_PATH1 = exportFile\\11\\
-#µ¼ÈëÎÄ¼þÉèÖÃ--Çë²»ÒªÐÞ¸Ä
+#å¯¼å…¥æ–‡ä»¶è®¾ç½®--è¯·ä¸è¦ä¿®æ”¹
 IMPORT_EXTENSION = extension.csv
-#±¾µØlogÊä³öÎÄ¼þÃû--Çë²»ÒªÐÞ¸Ä
+#æœ¬åœ°logè¾“å‡ºæ–‡ä»¶å--è¯·ä¸è¦ä¿®æ”¹
 LOCAL_LOG_FILE =local_log.txt
-#Ã°ÑÌÓÐ²âÊÔµ½£¬ÉÏ´«ÌáÊ¾Òô--Çë²»ÒªÐÞ¸Ä
+#å†’çƒŸæœ‰æµ‹è¯•åˆ°ï¼Œä¸Šä¼ æç¤ºéŸ³--è¯·ä¸è¦ä¿®æ”¹
 VOICEPACKAGE_NAME =sound-zh-1.0.12.tar
 SYSTEM_PROMPT_LANGUAGE = Language: zh
-#SSH ÓÃ»§ÃÜÂëÉèÖÃ£¬rootÕË»§Ä¬ÈÏÉèÖÃÎª¿Õ--ÔÝÊ±Ã»ÓÐÓÃµ½£¬Çë²»ÒªÐÞ¸Ä
+#SSH ç”¨æˆ·å¯†ç è®¾ç½®ï¼Œrootè´¦æˆ·é»˜è®¤è®¾ç½®ä¸ºç©º--æš‚æ—¶æ²¡æœ‰ç”¨åˆ°ï¼Œè¯·ä¸è¦ä¿®æ”¹
 SSH_PORT = 8022
 USERNAEM_LS = ls@yf
 USERNAME_SUPPORT = support
 PASSWORD_SUPPORT = iyeastar
-#AMIµÄlog´æ·Å£¬Çë²»ÒªÐÞ¸Ä
+#AMIçš„logå­˜æ”¾ï¼Œè¯·ä¸è¦ä¿®æ”¹
 RETRY_COUNT = 0
 
 AMI_LOG_FILE = AMI_log.txt
 
 
-##Grid hub ·þÎñµØÖ·
-#IS_RUN_REMOTE_SERVER = true
-#GRID_HUB_IP = 192.168.5.150
-#GRID_HUB_PORT = 4444
 
+#================è¾…åŠ©è®¾å¤‡ä¿¡æ¯è®¾ç½®=====================
 
-#================¸¨ÖúÉè±¸ÐÅÏ¢ÉèÖÃ=====================
-
-#ÓÃÓÚ×¢²ásip/iax trunk
-DEVICE_ASSIST_1 = 192.168.3.125
-#ÓÃÓÚ×¢²ásps /spx trunk
+#ç”¨äºŽæ³¨å†Œsip/iax trunk
+DEVICE_ASSIST_1 = 192.168.3.128
+DEVICE_ASSIST_1_TYPE = SSeries
+#ç”¨äºŽæ³¨å†Œsps /spx trunk
 DEVICE_ASSIST_2 = 192.168.11.199
-#ÓÃÓÚ×¢²áaccount trunk
+#ç”¨äºŽæ³¨å†Œaccount trunk
 DEVICE_ASSIST_3 = 192.168.3.124
 UDP_PORT_ASSIST_1 = 5060
 UDP_PORT_ASSIST_2 = 5060
 UDP_PORT_ASSIST_3 = 5060
-#¸¨Öú2¶ÔÓ¦µÄÊÖ»úºÅ
+#è¾…åŠ©2å¯¹åº”çš„æ‰‹æœºå·
 DEVICE_ASSIST_GSM = 18559230512
 
-#=================±»²âÉè±¸ÐÅÏ¢ÉèÖÃ======================
-#ÍøÒ³µÇÂ¼ÓÃ»§Ãû¡¢ÃÜÂë
+#=================Pç³»åˆ— è¢«æµ‹è®¾å¤‡ä¿¡æ¯è®¾ç½®======================
+#ç½‘é¡µç™»å½•ç”¨æˆ·åã€å¯†ç 
 LOGIN_USERNAME = admin
-LOGIN_PASSWORD = Yeastar202
+LOGIN_PASSWORD = Yeastar123
+EMAIL = yeastarautotest@163.com
 #LOGIN_PASSWORD = esi789*#
-#yes±íÊ¾ÓÃadminÈ¨ÏÞµÄÕË»§µÇÈë£¬no±íÊ¾·Ö»úµÇÈë
+#yesè¡¨ç¤ºç”¨adminæƒé™çš„è´¦æˆ·ç™»å…¥ï¼Œnoè¡¨ç¤ºåˆ†æœºç™»å…¥
 LOGIN_ADMIN = yes
-#±»²âÉè±¸²úÆ·Ãû³ÆÃüÃû  CloudPBX  PC  S100  S300  S412  S20  S50
+#è¢«æµ‹è®¾å¤‡äº§å“åç§°å‘½å  CloudPBX  PC  S100  S300  S412  S20  S50
 PRODUCT = S300
-#Ö÷²âÉè±¸µÄ°æ±¾ºÅ
+#ä¸»æµ‹è®¾å¤‡çš„ç‰ˆæœ¬å·
 VERSION = 30.13.0.34
 
-#ÉèÖÃ²âÊÔµÄä¯ÀÀÆ÷£ºchrome¡¢firefox¡¢ie £»ÍøÒ³´«ÊäÐ­ÒéºÍ¶Ë¿ÚºÅ£»CloudÄ¬ÈÏ¶Ë¿ÚºÅÖµÎª443
+#è®¾ç½®æµ‹è¯•çš„æµè§ˆå™¨ï¼šchromeã€firefoxã€ie ï¼›ç½‘é¡µä¼ è¾“åè®®å’Œç«¯å£å·ï¼›Cloudé»˜è®¤ç«¯å£å·å€¼ä¸º443
 BROWSER = chrome
 URL = https
 DEVICE_PORT = 8088
@@ -72,16 +67,16 @@ UDP_PORT = 5060
 TCP_PORT = 5060
 TLS_PORT = 5061
 
-#HTTP·þÎñÆ÷Â·¾¶£¬ÓÃÓÚÏÂÔØ¾µÏñ
-HTTP_SERVER_IMAGE = http://192.168.11.195:1234//30.11.99.99.99.bin
-#»ðºüä¯ÀÀÆ÷°²×°Â·¾¶£º¸ù¾Ý×Ô¼ºµçÄÔµÄ»ðºü°²×°Â·¾¶£¨×Ô¶¯»¯²âÊÔÄ¬ÈÏÊÇÊ¹ÓÃ¹È¸èä¯ÀÀÆ÷£¬Èç¹ûÃ»ÓÐÒªÇóÒªÓÃ»ðºü²âÊÔ£¬Õâ¸ö¿É²»ÓÃÐÞ¸Ä£©
+#HTTPæœåŠ¡å™¨è·¯å¾„ï¼Œç”¨äºŽä¸‹è½½é•œåƒ
+HTTP_SERVER_IMAGE = http://192.168.11.195:1234//30.11.99.99.991.bin
+#ç«ç‹æµè§ˆå™¨å®‰è£…è·¯å¾„ï¼šæ ¹æ®è‡ªå·±ç”µè„‘çš„ç«ç‹å®‰è£…è·¯å¾„ï¼ˆè‡ªåŠ¨åŒ–æµ‹è¯•é»˜è®¤æ˜¯ä½¿ç”¨è°·æ­Œæµè§ˆå™¨ï¼Œå¦‚æžœæ²¡æœ‰è¦æ±‚è¦ç”¨ç«ç‹æµ‹è¯•ï¼Œè¿™ä¸ªå¯ä¸ç”¨ä¿®æ”¹ï¼‰
 FIREFOX_PATH = D:\\Program Files (x86)\\Mozilla Firefox\\firefox.exe
 
-#AMIÉèÖÃ--CloudÐèÊÖ¶¯ÆôÓÃ
+#AMIè®¾ç½®--Cloudéœ€æ‰‹åŠ¨å¯ç”¨
 DEVICE_AMI_IP = 192.168.105.234
 AMI_PORT = 5038
 
-#VoIPÏßÂ·Ãû³Æ×Ô¶¨Òå--¿É²»ÐÞ¸Ä£¬Èç¹û¶ÔÓ¦µÄÍâÏß²»²âÊÔ£¬½«¶ÔÓ¦µÄÃû×ÖÉèÖÃÎªnull£»sip trunk ºÍsps trunk±ØÐë´æÔÚ
+#VoIPçº¿è·¯åç§°è‡ªå®šä¹‰--å¯ä¸ä¿®æ”¹ï¼Œå¦‚æžœå¯¹åº”çš„å¤–çº¿ä¸æµ‹è¯•ï¼Œå°†å¯¹åº”çš„åå­—è®¾ç½®ä¸ºnullï¼›sip trunk å’Œsps trunkå¿…é¡»å­˜åœ¨
 SIPTRUNK = SIP1
 SIPTRUNK2 = SIP2
 IAXTRUNK = IAX1
@@ -89,45 +84,44 @@ SPS = SPS1
 SPX = SPX1
 ACCOUNTTRUNK = null
 
-#ÎïÀíÍâÏß£¬¶¼Óë¸¨ÖúÉè±¸2¶Ô½Ó£¬ÌîµÄÖµ¿´Éè±¸ÖÐ¼ÌÒ³ÃæµÄname£¬Èç¹ûÎïÀíÍâÏß²»²âÊÔ£¬½«ÏàÓ¦µÄÖµÉèÖÃÎªnull£¬PC»òCloudPBXÖµ±ØÐëÉèÎªnull
+#ç‰©ç†å¤–çº¿ï¼Œéƒ½ä¸Žè¾…åŠ©è®¾å¤‡2å¯¹æŽ¥ï¼Œå¡«çš„å€¼çœ‹è®¾å¤‡ä¸­ç»§é¡µé¢çš„nameï¼Œå¦‚æžœç‰©ç†å¤–çº¿ä¸æµ‹è¯•ï¼Œå°†ç›¸åº”çš„å€¼è®¾ç½®ä¸ºnullï¼ŒPCæˆ–CloudPBXå€¼å¿…é¡»è®¾ä¸ºnull
 BRI_1 = BRI2-7
-BRI_2 = BRI2-8
+BRI_2 = null
 FXS_1 = 2-5
 #FXS_2 = 3-2
 FXO_1 = FXO1-3
-E1 = GIGIT3
+E1 = DIGIT3
 GSM = null
-#±»²âÉè±¸µÄÊÖ»úºÅ
+#è¢«æµ‹è®¾å¤‡çš„æ‰‹æœºå·
 DEVICE_TEST_GSM = null
-#DEVICE_TEST_GSM = 18450023994
 
-#ÍøÂç´ÅÅÌÉèÖÃ--ÓÉÓÚÍøÂç´ÅÅÌ´´½¨Ê±ÍøÒ³´«µÝ¸øºóÌ¨µÄ²ÎÊýÊÇµÝÔöµÄ£¬ËùÒÔ×Ô¶¯»¯Ö´ÐÐÊ±ÎÞ·¨ÅÐ¶Ï³öÊÇµÚ¼¸¸ö½¨Á¢µÄ£»¿ÉÍ¨¹ýdf²é¿´ÊÇµÚ¼¸¸ö£¬Èç¹ûÉè±¸Ö®Ç°Î´´´½¨¹ýÍøÂç´ÅÅÌ£¬Ôò¿ÉÒÔÕý³£ÉèÖÃ£»
-#½¨Òé²âÊÔÂ¼ÒôÊ±Ê¹ÓÃÍâ½Ó´æ´¢Éè±¸£¬½«NETWORK_DEVICE_NAMEÉèÖÃÎª¡°null¡±
-NETWORK_DEVICE_NAME = networkDevice
+#ç½‘ç»œç£ç›˜è®¾ç½®--ç”±äºŽç½‘ç»œç£ç›˜åˆ›å»ºæ—¶ç½‘é¡µä¼ é€’ç»™åŽå°çš„å‚æ•°æ˜¯é€’å¢žçš„ï¼Œæ‰€ä»¥è‡ªåŠ¨åŒ–æ‰§è¡Œæ—¶æ— æ³•åˆ¤æ–­å‡ºæ˜¯ç¬¬å‡ ä¸ªå»ºç«‹çš„ï¼›å¯é€šè¿‡dfæŸ¥çœ‹æ˜¯ç¬¬å‡ ä¸ªï¼Œå¦‚æžœè®¾å¤‡ä¹‹å‰æœªåˆ›å»ºè¿‡ç½‘ç»œç£ç›˜ï¼Œåˆ™å¯ä»¥æ­£å¸¸è®¾ç½®ï¼›
+#å»ºè®®æµ‹è¯•å½•éŸ³æ—¶ä½¿ç”¨å¤–æŽ¥å­˜å‚¨è®¾å¤‡ï¼Œå°†NETWORK_DEVICE_NAMEè®¾ç½®ä¸ºâ€œnullâ€
+NETWORK_DEVICE_NAME = null
 NETWORK_DEVICE_IP = 192.168.3.5
 NETWORK_DEVICE_SHARE_NAME = record
 NETWORK_DEVICE_USER_NAME =
 NETWORK_DEVICE_USER_PASSWORD =
 
-#Â¼Òô´æ´¢ÉèÖÃ£ºsharetest1¡¢TF/SD¡¢USB¡¢HD
+#å½•éŸ³å­˜å‚¨è®¾ç½®ï¼šsharetest1ã€TF/SDã€USBã€HD
 DEVICE_RECORD_NAME = null
 
 
 
 ##=================3.230---S50----=========================
-##ÍøÒ³µÇÂ¼ÓÃ»§Ãû¡¢ÃÜÂë
+##ç½‘é¡µç™»å½•ç”¨æˆ·åã€å¯†ç 
 #LOGIN_USERNAME = admin
 #LOGIN_PASSWORD = password
 #RETRY_COUNT = 0
 #PRODUCT = S50
 #VERSION = 30.5.0.32
-##ÉèÖÃ²âÊÔµÄä¯ÀÀÆ÷£ºchrome¡¢firefox¡¢ie
+##è®¾ç½®æµ‹è¯•çš„æµè§ˆå™¨ï¼šchromeã€firefoxã€ie
 #BROWSER = chrome
 ##BROWSER = firefox
 ##BROWSER = ie
 #URL = https
 #
-##SSH ÓÃ»§ÃÜÂëÉèÖÃ£¬rootÕË»§Ä¬ÈÏÉèÖÃÎª¿Õ
+##SSH ç”¨æˆ·å¯†ç è®¾ç½®ï¼Œrootè´¦æˆ·é»˜è®¤è®¾ç½®ä¸ºç©º
 #SSH_PORT = 8022
 #USERNAEM_LS = ls@yf
 #USERNAME_SUPPORT = support
@@ -147,18 +141,18 @@ DEVICE_RECORD_NAME = null
 #UDP_PORT_ASSIST_2 = 5060
 #AMI_PORT = 5038
 #
-##ÓÃÓÚ×¢²ásip/iax trunk
+##ç”¨äºŽæ³¨å†Œsip/iax trunk
 #DEVICE_ASSIST_1 = 192.168.3.235
-##ÓÃÓÚ×¢²ásps /spx trunk
+##ç”¨äºŽæ³¨å†Œsps /spx trunk
 #DEVICE_ASSIST_2 = 192.168.3.236
 #DEVICE_ASSIST_GSM = 18506938857
 #DEVICE_TEST_GSM = 18450024021
-##VoIPÏßÂ·Ãû³Æ×Ô¶¨Òå--¿É²»ÐÞ¸Ä
+##VoIPçº¿è·¯åç§°è‡ªå®šä¹‰--å¯ä¸ä¿®æ”¹
 #SIPTRUNK = SIP1
 #IAXTRUNK = IAX1
 #SPS = SPS1
 #SPX = SPX1
-##ÎïÀíÍâÏß£¬¶¼Óë¸¨ÖúÉè±¸2¶Ô½Ó£¬PC»òCloudPBXÖµ±ØÐëÉèÎª¿Õ
+##ç‰©ç†å¤–çº¿ï¼Œéƒ½ä¸Žè¾…åŠ©è®¾å¤‡2å¯¹æŽ¥ï¼ŒPCæˆ–CloudPBXå€¼å¿…é¡»è®¾ä¸ºç©º
 #BRI_1 = BRI3
 #BRI_2 = BRI4
 #FXS_1 = 1-1
@@ -168,33 +162,33 @@ DEVICE_RECORD_NAME = null
 #GSM =  GSM7
 #E1 = null
 #
-##ÍøÂç´ÅÅÌÉèÖÃ,Ãû×Ö±ØÐëÎªnetdisk-1,1±íÊ¾µÚ¼¸´Î´´½¨µÄÍøÂç´ÅÅÌ£¬ÈôÖ®Ç°ÒÑ¾­´´½¨¹ý´ÅÅÌ£¬¶ÔÓ¦µÄÊý×Ö±ØÐë¸ù¾Ýdf²éÑ¯µ½µÄÐÞ¸Ä
+##ç½‘ç»œç£ç›˜è®¾ç½®,åå­—å¿…é¡»ä¸ºnetdisk-1,1è¡¨ç¤ºç¬¬å‡ æ¬¡åˆ›å»ºçš„ç½‘ç»œç£ç›˜ï¼Œè‹¥ä¹‹å‰å·²ç»åˆ›å»ºè¿‡ç£ç›˜ï¼Œå¯¹åº”çš„æ•°å­—å¿…é¡»æ ¹æ®dfæŸ¥è¯¢åˆ°çš„ä¿®æ”¹
 #NETWORK_DEVICE_NAME = netdisk1
 #NETWORK_DEVICE_IP = 192.168.3.4
 #NETWORK_DEVICE_SHARE_NAME = record
 #NETWORK_DEVICE_USER_NAME =
 #NETWORK_DEVICE_USER_PASSWORD =
-##Â¼Òô´æ´¢ÉèÖÃ£ºsharetest1¡¢TF/SD¡¢USB¡¢HD
+##å½•éŸ³å­˜å‚¨è®¾ç½®ï¼šsharetest1ã€TF/SDã€USBã€HD
 #DEVICE_RECORD_NAME = TF/SD
-##µ¼ÈëÎÄ¼þÉèÖÃ
+##å¯¼å…¥æ–‡ä»¶è®¾ç½®
 #IMPORT_EXTENSION = extension.csv
 
 #========================cloudPBX===========================================
-#ÍøÒ³µÇÂ¼ÓÃ»§Ãû¡¢ÃÜÂë
+#ç½‘é¡µç™»å½•ç”¨æˆ·åã€å¯†ç 
 #LOGIN_USERNAME = cecilia@yeastar.com
 #LOGIN_PASSWORD = Yeastar202
-#yes±íÊ¾ÓÃadminÈ¨ÏÞµÄÕË»§µÇÈë£¬no±íÊ¾·Ö»úµÇÈë
+#yesè¡¨ç¤ºç”¨adminæƒé™çš„è´¦æˆ·ç™»å…¥ï¼Œnoè¡¨ç¤ºåˆ†æœºç™»å…¥
 #LOGIN_ADMIN = yes
-#²úÆ·Ãû³ÆÃüÃû  CloudPBX  PC  S100  S300  S412  S20  S50
+#äº§å“åç§°å‘½å  CloudPBX  PC  S100  S300  S412  S20  S50
 #PRODUCT = CloudPBX
 #VERSION = 81.7.0.12
-#ÉèÖÃ²âÊÔµÄä¯ÀÀÆ÷£ºchrome¡¢firefox¡¢ie
+#è®¾ç½®æµ‹è¯•çš„æµè§ˆå™¨ï¼šchromeã€firefoxã€ie
 #BROWSER = chrome
 #BROWSER = firefox
 #BROWSER = ie
 #URL = https
 
-#SSH ÓÃ»§ÃÜÂëÉèÖÃ£¬rootÕË»§Ä¬ÈÏÉèÖÃÎª¿Õ
+#SSH ç”¨æˆ·å¯†ç è®¾ç½®ï¼Œrootè´¦æˆ·é»˜è®¤è®¾ç½®ä¸ºç©º
 #SSH_PORT = 11622
 #USERNAEM_LS = root
 #USERNAME_SUPPORT = support
@@ -218,59 +212,59 @@ DEVICE_RECORD_NAME = null
 #AMI_PORT = 2338
 #DEVICE_AMI_IP = 47.96.185.223
 
-#ÓÃÓÚ×¢²ásps /spx trunk
+#ç”¨äºŽæ³¨å†Œsps /spx trunk
 #DEVICE_ASSIST_2 = cyt.cn1.yeastarcloud.com
-#ÓÃÓÚ×¢²ásip/iax trunk
+#ç”¨äºŽæ³¨å†Œsip/iax trunk
 #DEVICE_ASSIST_1 = cyt.isbcxyy.yeastarcloud.com
 #DEVICE_ASSIST_GSM = null
 #DEVICE_TEST_GSM = null
 #DEVICE_ASSIST_3 = 192.168.2.125
-#VoIPÏßÂ·Ãû³Æ×Ô¶¨Òå--¿É²»ÐÞ¸Ä
+#VoIPçº¿è·¯åç§°è‡ªå®šä¹‰--å¯ä¸ä¿®æ”¹
 #SIPTRUNK = SIP1
 #IAXTRUNK = IAX1
 #SIPTRUNK2 = SIP2
 #ACCOUNTTRUNK = Account1
 #SPS = SPS1
 #SPX = SPX1
-#ÎïÀíÍâÏß£¬¶¼Óë¸¨ÖúÉè±¸2¶Ô½Ó£¬PC»òCloudPBXÖµ±ØÐëÉèÎªnull
+#ç‰©ç†å¤–çº¿ï¼Œéƒ½ä¸Žè¾…åŠ©è®¾å¤‡2å¯¹æŽ¥ï¼ŒPCæˆ–CloudPBXå€¼å¿…é¡»è®¾ä¸ºnull
 #BRI_1 = null
 #BRI_2 = null
-
+#FXS_1 = null
 #FXS_2 = null
 #FXO_1 = null
 #FXO_2 = null
 #GSM =  null
 #E1 = null
 
-##ÍøÂç´ÅÅÌÉèÖÃ,Ãû×Ö±ØÐëÎªnetdisk-1,1±íÊ¾µÚ¼¸´Î´´½¨µÄÍøÂç´ÅÅÌ£¬ÈôÖ®Ç°ÒÑ¾­´´½¨¹ý´ÅÅÌ£¬¶ÔÓ¦µÄÊý×Ö±ØÐë¸ù¾Ýdf²éÑ¯µ½µÄÐÞ¸Ä
+##ç½‘ç»œç£ç›˜è®¾ç½®,åå­—å¿…é¡»ä¸ºnetdisk-1,1è¡¨ç¤ºç¬¬å‡ æ¬¡åˆ›å»ºçš„ç½‘ç»œç£ç›˜ï¼Œè‹¥ä¹‹å‰å·²ç»åˆ›å»ºè¿‡ç£ç›˜ï¼Œå¯¹åº”çš„æ•°å­—å¿…é¡»æ ¹æ®dfæŸ¥è¯¢åˆ°çš„ä¿®æ”¹
 #NETWORK_DEVICE_NAME = netdisk1
 #NETWORK_DEVICE_IP = 192.168.3.4
 #NETWORK_DEVICE_SHARE_NAME = record
 #NETWORK_DEVICE_USER_NAME =
 #NETWORK_DEVICE_USER_PASSWORD =
-##Â¼Òô´æ´¢ÉèÖÃ£ºsharetest1¡¢TF/SD¡¢USB¡¢HD
+##å½•éŸ³å­˜å‚¨è®¾ç½®ï¼šsharetest1ã€TF/SDã€USBã€HD
 #DEVICE_RECORD_NAME = TF/SD
-##µ¼ÈëÎÄ¼þÉèÖÃ
+##å¯¼å…¥æ–‡ä»¶è®¾ç½®
 #IMPORT_EXTENSION = extensionPC.csv
-##ÖØÅÜ´ÎÊý
+##é‡è·‘æ¬¡æ•°
 #RETRY_COUNT=0
-###±¾µØlogÊä³öÎÄ¼þÃû
+###æœ¬åœ°logè¾“å‡ºæ–‡ä»¶å
 #LOCAL_LOG_FILE =local_log.txt
 
 ###==============================  PC  ===============================
-##ÍøÒ³µÇÂ¼ÓÃ»§Ãû¡¢ÃÜÂë
+##ç½‘é¡µç™»å½•ç”¨æˆ·åã€å¯†ç 
 #LOGIN_USERNAME = admin
 #LOGIN_PASSWORD = password
 #RETRY_COUNT = 0
 #PRODUCT = PC
 #VERSION = 30.5.0.24
-##ÉèÖÃ²âÊÔµÄä¯ÀÀÆ÷£ºchrome¡¢firefox¡¢ie
+##è®¾ç½®æµ‹è¯•çš„æµè§ˆå™¨ï¼šchromeã€firefoxã€ie
 #BROWSER = chrome
 ##BROWSER = firefox
 ##BROWSER = ie
 #URL = https
 #
-##SSH ÓÃ»§ÃÜÂëÉèÖÃ£¬rootÕË»§Ä¬ÈÏÉèÖÃÎª¿Õ
+##SSH ç”¨æˆ·å¯†ç è®¾ç½®ï¼Œrootè´¦æˆ·é»˜è®¤è®¾ç½®ä¸ºç©º
 #SSH_PORT = 8022
 #USERNAEM_LS = ls@yf
 #USERNAME_SUPPORT = support
@@ -290,35 +284,35 @@ DEVICE_RECORD_NAME = null
 #UDP_PORT_ASSIST_2 = 5060
 #AMI_PORT = 5038
 #
-##ÓÃÓÚ×¢²ásip/iax trunk
+##ç”¨äºŽæ³¨å†Œsip/iax trunk
 #DEVICE_ASSIST_1 = 192.168.3.235
-##ÓÃÓÚ×¢²ásps /spx trunk
+##ç”¨äºŽæ³¨å†Œsps /spx trunk
 #DEVICE_ASSIST_2 = 192.168.3.236
 #DEVICE_ASSIST_GSM = 18506938857
 #DEVICE_TEST_GSM = 18450024021
-##VoIPÏßÂ·Ãû³Æ×Ô¶¨Òå--¿É²»ÐÞ¸Ä
+##VoIPçº¿è·¯åç§°è‡ªå®šä¹‰--å¯ä¸ä¿®æ”¹
 #SIPTRUNK = SIP1
 #IAXTRUNK = IAX1
 #SPS = SPS1
 #SPX = SPX1
-##ÎïÀíÍâÏß£¬¶¼Óë¸¨ÖúÉè±¸2¶Ô½Ó£¬PC»òCloudPBXÖµ±ØÐëÉèÎª¿Õ
+##ç‰©ç†å¤–çº¿ï¼Œéƒ½ä¸Žè¾…åŠ©è®¾å¤‡2å¯¹æŽ¥ï¼ŒPCæˆ–CloudPBXå€¼å¿…é¡»è®¾ä¸ºç©º
 #BRI_1 = null
 #BRI_2 = null
-
+#FXS_1 = null
 ##FXS_2 = 3-2
 #FXO_1 = null
 ##FXO_2 = FXO2-4
 #GSM =  null
 #E1 = null
 #
-##ÍøÂç´ÅÅÌÉèÖÃ,Ãû×Ö±ØÐëÎªnetdisk-1,1±íÊ¾µÚ¼¸´Î´´½¨µÄÍøÂç´ÅÅÌ£¬ÈôÖ®Ç°ÒÑ¾­´´½¨¹ý´ÅÅÌ£¬¶ÔÓ¦µÄÊý×Ö±ØÐë¸ù¾Ýdf²éÑ¯µ½µÄÐÞ¸Ä
+##ç½‘ç»œç£ç›˜è®¾ç½®,åå­—å¿…é¡»ä¸ºnetdisk-1,1è¡¨ç¤ºç¬¬å‡ æ¬¡åˆ›å»ºçš„ç½‘ç»œç£ç›˜ï¼Œè‹¥ä¹‹å‰å·²ç»åˆ›å»ºè¿‡ç£ç›˜ï¼Œå¯¹åº”çš„æ•°å­—å¿…é¡»æ ¹æ®dfæŸ¥è¯¢åˆ°çš„ä¿®æ”¹
 #NETWORK_DEVICE_NAME = netdisk1
 #NETWORK_DEVICE_IP = 192.168.3.4
 #NETWORK_DEVICE_SHARE_NAME = record
 #NETWORK_DEVICE_USER_NAME =
 #NETWORK_DEVICE_USER_PASSWORD =
-##Â¼Òô´æ´¢ÉèÖÃ£ºsharetest1¡¢TF/SD¡¢USB¡¢HD
+##å½•éŸ³å­˜å‚¨è®¾ç½®ï¼šsharetest1ã€TF/SDã€USBã€HD
 #DEVICE_RECORD_NAME = Local
 #
-##µ¼ÈëÎÄ¼þÉèÖÃ
+##å¯¼å…¥æ–‡ä»¶è®¾ç½®
 #IMPORT_EXTENSION = extension.csv
