--- a/SwebTest/pom.xml
+++ b/SwebTest/pom.xml
@@ -72,6 +72,7 @@
                         <!--                <version>3.0.0-M4</version>-->
                         <configuration>
                             <forkCount>0</forkCount>
+                            <reuseForks>false</reuseForks>
                             <runOrder>alphabetical</runOrder>
                             <suiteXmlFiles>
                                 <suiteXmlFile>suite/${suiteXmlFile}</suiteXmlFile>
