--- a/SwebTest/pom.xml
+++ b/SwebTest/pom.xml
@@ -68,9 +68,11 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.22.2</version>
+                        <version>3.0.0-M5</version>
                         <!--                <version>3.0.0-M4</version>-->
                         <configuration>
+                            <forkCount>1</forkCount>
+                            <reuseForks>false</reuseForks>
                             <runOrder>alphabetical</runOrder>
                             <suiteXmlFiles>
                                 <suiteXmlFile>suite/${suiteXmlFile}</suiteXmlFile>
@@ -80,7 +82,7 @@
                             <!--                    add usersystemclassloader for vm crash-->
                             <useSystemClassLoader>false</useSystemClassLoader>
                             <!--                    关闭并发-->
-                            <forkMode>once</forkMode>
+<!--                            <forkMode>once</forkMode>-->
                             <!--                    <forkMode>once</forkMode>-->
                             <!--                    <forkCount>2.0C</forkCount>-->
                             <!--                    <parallel>methods</parallel>-->
@@ -146,8 +148,8 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.22.2</version>
-                        <!--                <version>3.0.0-M4</version>-->
+<!--                        <version>2.22.2</version>-->
+                        <version>3.0.0-M5</version>
                         <configuration>
                             <runOrder>alphabetical</runOrder>
                             <suiteXmlFiles>
