--- a/SwebTest/src/test/resources/data.properties
+++ b/SwebTest/src/test/resources/data.properties
@@ -85,12 +85,12 @@ SPX = SPX1
 ACCOUNTTRUNK = null
 
 #物理外线，都与辅助设备2对接，填的值看设备中继页面的name，如果物理外线不测试，将相应的值设置为null，PC或CloudPBX值必须设为null
-BRI_1 = BRI1-3
+BRI_1 = BRI1-7
 BRI_2 = null
-FXS_1 = 1-7
+FXS_1 = 1-3
 #FXS_2 = 3-2
 FXO_1 = FXO1-5
-E1 = DIGIT2
+E1 = null//DIGIT2
 GSM = null
 #被测设备的手机号
 DEVICE_TEST_GSM = null
