--- a/SwebTest/pom.xml
+++ b/SwebTest/pom.xml
@@ -548,7 +548,12 @@
             <version>1.8.0</version>
         </dependency>
 
-
+        <!-- https://mvnrepository.com/artifact/ch.ethz.ganymed/ganymed-ssh2 -->
+        <dependency>
+            <groupId>ch.ethz.ganymed</groupId>
+            <artifactId>ganymed-ssh2</artifactId>
+            <version>262</version>
+        </dependency>
     </dependencies>
 
     
