--- a/SwebTest/src/test/resources/data.properties
+++ b/SwebTest/src/test/resources/data.properties
@@ -24,23 +24,22 @@ RETRY_COUNT = 0
 
 AMI_LOG_FILE = AMI_log.txt
 
-#chrome 分辨率 default 1920x1080   1366x768	1440x900 	1536x864	1600x900 	1680x1050	1920x1080	2560x1080	 2560x1440	2560 x 1600	2880 x 1800	3440x1440	3840x2160
-#screenResolutionUser =
+
 
 #================辅助设备信息设置=====================
 
 #用于注册sip/iax trunk
-DEVICE_ASSIST_1 = 192.168.3.235
-DEVICE_ASSIST_1_TYPE = PSeries
+DEVICE_ASSIST_1 = 192.168.3.125
+DEVICE_ASSIST_1_TYPE = SSeries
 #用于注册sps /spx trunk
-DEVICE_ASSIST_2 = 192.168.3.236
+DEVICE_ASSIST_2 = 192.168.3.128
 #用于注册account trunk
-DEVICE_ASSIST_3 = 192.168.3.231
+DEVICE_ASSIST_3 = 192.168.3.124
 UDP_PORT_ASSIST_1 = 5060
 UDP_PORT_ASSIST_2 = 5060
 UDP_PORT_ASSIST_3 = 5060
 #辅助2对应的手机号
-DEVICE_ASSIST_GSM = 15606905005
+DEVICE_ASSIST_GSM = 15606924250
 
 #=================P系列 被测设备信息设置======================
 #网页登录用户名、密码
@@ -51,19 +50,19 @@ EMAIL = yeastarautotest@163.com
 #yes表示用admin权限的账户登入，no表示分机登入
 LOGIN_ADMIN = yes
 #被测设备产品名称命名  CloudPBX  PC  S100  S300  S412  S20  S50
-PRODUCT = P560
+PRODUCT = S300
 #主测设备的版本号
-VERSION = 37.1.0.13
+VERSION = 30.13.0.34
 
 #设置测试的浏览器：chrome、firefox、ie ；网页传输协议和端口号；Cloud默认端口号值为443
 BROWSER = chrome
 URL = https
 DEVICE_PORT = 8088
-DEVICE_IP_LAN = 192.168.3.222
-DEVICE_IP_WAN = 192.168.3.230
+DEVICE_IP_LAN = 192.168.3.127
+DEVICE_IP_WAN = 192.168.11.230
 DEVICE_IP_SUBNETMASK = 255.255.255.0
-DEVICE_IP_GATEWAY = 192.168.3.1
-DEVICE_IP_DNS = 192.168.1.1
+DEVICE_IP_GATEWAY = 192.168.11.1
+DEVICE_IP_DNS = 192.168.3.1
 UDP_PORT = 5060
 TCP_PORT = 5060
 TLS_PORT = 5061
@@ -74,28 +73,29 @@ HTTP_SERVER_IMAGE = http://192.168.11.195:1234//30.11.99.99.99.bin
 FIREFOX_PATH = D:\\Program Files (x86)\\Mozilla Firefox\\firefox.exe
 
 #AMI设置--Cloud需手动启用
-DEVICE_AMI_IP = 192.168.3.222
+DEVICE_AMI_IP = 192.168.105.234
 AMI_PORT = 5038
 
 #VoIP线路名称自定义--可不修改，如果对应的外线不测试，将对应的名字设置为null；sip trunk 和sps trunk必须存在
-SIPTRUNK = SIP1
+SIPTRUNK = sipRegister
 SIPTRUNK2 = SIP2
 IAXTRUNK = IAX1
 SPS = SPS1
 SPX = SPX1
-ACCOUNTTRUNK = Account6700
+ACCOUNTTRUNK = 6700Account
 
 #物理外线，都与辅助设备2对接，填的值看设备中继页面的name，如果物理外线不测试，将相应的值设置为null，PC或CloudPBX值必须设为null
-BRI_1 = BRI1-1
+BRI_1 = BRI1-7
 BRI_2 = null
-FXS_1 = 1-5
+FXS_1 = 2-5
 #FXS_2 = 3-2
-FXO_1 = FXO1-3
-E1 = DIGIT3
-GSM = LTE2-1
+FXO_1 = FXO1-5
+E1 = DIGIT2
+GSM = LTE1-1
 #被测设备的手机号
-DEVICE_TEST_GSM = 15606970508
-
+DEVICE_TEST_GSM = 15859219937
+#主叫设备的手机号
+DEVICE_TEST_GSM_CALLER = 15859250212
 
 #网络磁盘设置--由于网络磁盘创建时网页传递给后台的参数是递增的，所以自动化执行时无法判断出是第几个建立的；可通过df查看是第几个，如果设备之前未创建过网络磁盘，则可以正常设置；
 #建议测试录音时使用外接存储设备，将NETWORK_DEVICE_NAME设置为“null”
