--- a/SwebTest/pom.xml
+++ b/SwebTest/pom.xml
@@ -362,6 +362,13 @@
     </build>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.github.fracpete/musicg -->
+        <dependency>
+            <groupId>com.github.fracpete</groupId>
+            <artifactId>musicg</artifactId>
+            <version>1.4.2.1</version>
+        </dependency>
+
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
